--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.90.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "seismic-react": "^1.0.49",
     "viem": "^2.40.0",
     "wagmi": "^3.0.1"
   },
