--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@metamask/sdk": "^0.34.0",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
-    "@rainbow-me/rainbowkit": "2",
+    "@rainbow-me/rainbowkit": "^2.2.9",
     "@reown/appkit": "^1.8.14",
     "@reown/appkit-adapter-wagmi": "^1.8.14",
     "@tanstack/react-query": "^5.90.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "seismic-react": "^1.0.52",
+    "seismic-viem": "^1.0.52",
     "viem": "^2.40.0",
-    "wagmi": "^3.0.1"
+    "wagmi": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
