--- a/packages/indexer/.gitignore
+++ b/packages/indexer/.gitignore
@@ -1,34 +1,18 @@
-# dependencies (bun install)
-node_modules
+# Dependencies
+/node_modules
 
-# output
-out
-dist
-*.tgz
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# code coverage
-coverage
-*.lcov
-
-# logs
-logs
-_.log
-report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# caches
-.eslintcache
-.cache
-*.tsbuildinfo
-
-# IntelliJ based IDEs
-.idea
-
-# Finder (MacOS) folder config
+# Misc
 .DS_Store
+
+# Env files
+.env*.local
+
+# Ponder
+/generated/
+/.ponder/
