--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -1,15 +1,28 @@
 {
   "name": "deposit-indexer",
-  "module": "index.ts",
-  "type": "module",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+  "type": "module",
+  "scripts": {
+    "dev": "ponder dev",
+    "start": "ponder start",
+    "db": "ponder db",
+    "codegen": "ponder codegen",
+    "serve": "ponder serve",
+    "lint": "eslint .",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "ponder": "^0.15.12"
+    "ponder": "^0.15.12",
+    "hono": "^4.5.0",
+    "viem": "^2.21.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "eslint": "^8.54.0",
+    "eslint-config-ponder": "^0.15.12",
+    "typescript": "^5.3.2"
+  },
+  "engines": {
+    "node": ">=18.14"
   }
 }
