--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ponder dev",
-    "start": "ponder start",
+    "dev": "ponder dev --schema ponder_deposits",
+    "drop-schema": "bun run src/drop-schema.ts",
+    "start": "ponder start --schema ponder_deposits",
     "db": "ponder db",
     "codegen": "ponder codegen",
     "serve": "ponder serve",
@@ -14,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "hono": "^4.5.0",
+    "pg": "^8.16.3",
     "ponder": "^0.15.12",
     "prettier": "^3.7.3",
     "seismic-viem": "^1.0.52",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/pg": "^8.15.6",
     "eslint": "^8.54.0",
     "eslint-config-ponder": "^0.15.12",
     "typescript": "^5.3.2"
