--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -2,6 +2,9 @@
   "name": "@staking-ui/indexer",
   "private": true,
   "type": "module",
+  "exports": {
+    "./types": "./src/types.ts"
+  },
   "scripts": {
     "dev": "ponder dev --schema ponder_deposits",
     "start": "ponder start --schema ponder_deposits",
